assets/css/beautifuljekyll.css
/* ... */
.navbar-custom .avatar-container .avatar-img-border {
  width: 100%;
  margin-left: -50%;
  {% unless site.round-avatar == false %}
    border-radius: 50%;
    box-shadow: 0 0 0.5rem rgba(0, 0, 0, .8);
    -webkit-box-shadow: 0 0 0.3125rem rgba(0, 0, 0, .8);
    -moz-box-shadow: 0 0 0.5rem rgba(0, 0, 0, .8);
  {% endunless %}
}
.navbar-custom .avatar-container .avatar-img {
  width: 100%;
  {% unless site.round-avatar == false %}
    border-radius: 50%;
  {% endunless %}
  display: block;
}

.navbar-custom.top-nav-expanded .avatar-container {
  display: none;
}

@media (min-width: 1200px) {
  .navbar-custom.top-nav-regular .avatar-container {
    width: 6.25rem;
    bottom: -1.9375rem;
  }

  .navbar-custom.top-nav-regular .avatar-container .avatar-img-border {
    width: 100%;
    {% unless site.round-avatar == false %}
    box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    {% endunless %}
  }

  .navbar-custom.top-nav-regular .avatar-container .avatar-img {
    width: 100%;
  }
}

/* --- Footer --- */

footer {
  padding: 1.875rem 0;
  border-top: 1px var(--footer-col) solid;
  margin-top: 3.125rem;
  font-size: 0.875rem;
  background-color: var(--footer-col);
  {% if site.footer-img %}
    background-image: url({{ site.footer-img | relative_url }});
    background-attachment: fixed;
  {% endif %}
}

footer p.text-muted {
  color: var(--footer-text-col) !important;
}

footer a {
  color: var(--footer-link-col);
}
footer .footer-links a {
  color: var(--text-col);
}
footer .footer-links .fa-inverse {
  color: var(--page-col);
}

footer a:hover,
footer a:focus {
  color: var(--footer-hover-col);
}

footer .list-inline {
  margin: 0;
  padding: 0;
  margin-bottom: 1.875rem;
}
footer .copyright {
  font-family: var(--header-font);
  text-align: center;
  margin-bottom: 0;
  margin-top: 0;
}
footer .theme-by {
  text-align: center;
  margin: 0.625rem 0 0;
}
footer .footer-custom-content {
  text-align: center;
  margin-bottom: 0.9375rem;
  font-family: var(--header-font);
}

@media (min-width: 768px) {
  footer {
    padding: 3.125rem 0;
  }
  footer .footer-links {
    font-size: 1.125rem;
  }
  footer .copyright {
    font-size: 1rem;
  }
  footer .footer-custom-content {
    font-size: 1rem;
  }
}

/* --- Post preview (feed) --- */

.posts-list {
    margin: 0;
}

.post-preview {
  padding: 1.25rem 0;
  border-bottom: 1px solid #eee;
  overflow: hidden;
}

@media (min-width: 768px) {
  .post-preview {
    padding: 2.1875rem 0;
  }
}

.post-preview:last-child {
  border-bottom: 0;
}

.post-preview a {
  text-decoration: none;
  font-family: var(--header-font);
  color: var(--text-col);
}

.post-preview a:focus,
.post-preview a:hover {
  text-decoration: none;
  color: var(--hover-col);
}

.post-preview .post-title {
  font-size: 1.875rem;
  margin-top: 0;
}
.post-preview .post-subtitle {
  margin: 0;
  font-weight: 300;
  margin-bottom: 0.625rem;
}
.post-preview .post-meta,
.post-heading .post-meta {
  color: var(--mid-col);
  font-size: 1.125rem;
  font-style: italic;
  margin: 0 0 0.625rem;
  font-family: var(--body-font);
}
.post-heading .post-meta {
  display: inline-block;
}
@media (max-width: 767px) {
  .post-heading .post-meta {
    display: block;
    margin-bottom: 0;
  }
}
.post-heading .post-meta .middot {
  margin: 0 0.625rem;
}
.post-preview .post-entry {
  width: 100%;
}
.post-preview .post-image {
  float: right;
  margin-left: 0.625rem;
  height: 12rem;
  width: 12rem;
}
.post-preview .post-image {
  filter: grayscale(40%);
}
.post-preview .post-image:hover {
  filter: grayscale(0%);
}
.post-preview .post-image img {
  max-height: 100%;
  max-width: 100%;
}
.post-preview .post-image-short {
  margin-top: -2.1875rem;
}
@media (max-width: 767px) {
  .post-preview .post-image {
    height: 9rem;
    width: 9rem;
  }
  .post-preview .post-image-short {
    margin-top: 0;
  }
}
.post-preview .post-image-small {
  width: 100%;
  height: 100%;
  text-align: center;
  display: none;
}
.post-preview .post-image-small img {
  max-width: 6.25rem;
  max-height: 6.25rem;
}
@media (max-width: 500px) {
  .post-preview .post-image {
    display: none;
  }
  .post-preview .post-image-small {
    display: block;
  }
}

.post-preview .post-read-more {
  font-weight: 800;
}

@media (min-width: 768px) {
  .post-preview .post-title {
    font-size: 2.25rem;
  }
}

/* --- Tags --- */

.blog-tags {
  font-family: var(--header-font);
  font-size: 0.9375rem;
  margin: 1.875rem 0;
}

.blog-tags span {
  color: var(--text-col);
  opacity: 0.8;
}

.blog-tags .list-inline-item {
  margin-right: 0;
}

.blog-tags a {
  color: var(--text-col);
  text-decoration: none;
  padding: 0 0.3125rem;
  opacity: 0.8;
  border: 1px solid transparent;
  border-radius: 0.1875rem;
}

.blog-tags a:hover {
  opacity: 1;
  color: var(--text-col);
  border-color: var(--text-col);
}

.post-preview .blog-tags {
  margin-top: 0.3125rem;
  margin-bottom: 0;
}

@media (min-width: 768px) {
  .post-preview .blog-tags {
    margin-top: 0.625rem;
  }
}

/* Tags page */

.tag-btn {
  margin: 0.3125rem;
}

#full-tags-list {
  font-family: var(--header-font);
}

#full-tags-list .tag-entry {
  margin: 0 0 0.9375rem 1.5625rem;
}

#full-tags-list .tag-entry a {
  font-size: 1.25rem;
}

#full-tags-list .tag-entry .entry-date {
  color: var(--mid-col);
  font-style: italic;
  font-size: 1rem;
}

/* --- Post and page headers --- */

.intro-header {
  margin: 5rem 0 1.25rem;
  position: relative;
}
.intro-header.big-img {
  background: no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  margin-top: 3.1875rem; /* The small navbar is 50px tall + 1px border */
  margin-bottom: 2.1875rem;
}
nav.top-nav-short-permanent ~ header > .intro-header {
  margin-top: 5rem;
}
/* ... */

